--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <h1>This is a git practice</h1>
         <p>im just trying to understand git with real practice</p>
+        <p> im ruinning out of ideas</p>
     </body>
 </html>
