--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <h1>This is a git practice</h1>
         <p>im just trying to understand git with real practice</p>
         <p> im ruinning out of ideas</p>
+        <p>this is another random paragraph</p>
     </body>
 </html>
